<?xml version="1.0"?>
<package format="2">
  <name>low_command</name>
  <version>0.0.0</version>
  <description>The low_command package</description>

  <maintainer email="my@email.com">My Name</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>unitree_legged_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>unitree_legged_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>unitree_legged_msgs</exec_depend>

  <export>
  </export>
</package>
